# mjlab_myochallenge

./: README.md  pyproject.toml
.github/workflows/: deploy-recordings.yml
notebooks/: train.ipynb
scripts/: record.py
src/mjlab_myochallenge/robot/: myohand_constants.py
src/mjlab_myochallenge/robot/assets/: myohand_assets_fixed.xml  myohand_die_fixed.xml
src/mjlab_myochallenge/robot/assets/scene/: myosuite_scene.xml
src/mjlab_myochallenge/scripts/: __init__.py  compile_mjb.py
src/mjlab_myochallenge/tasks/: die_reorient_env_cfg.py
