[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[project]
name = "mjlab-myochallenge"
version = "0.1.0"
description = "MyoChallenge environments and tasks in mjlab framework"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mjlab",
    "myosuite",
    "numpy",
    "torch",
]
readme = "README.md"
authors = [
    {name = "mjlab_myochallenge contributors"}
]

[project.entry-points."mjlab.tasks"]
mjlab_myochallenge = "mjlab_myochallenge.tasks"

[tool.ruff]
src = ["src/mjlab_myochallenge"]
indent-width = 4

[tool.uv.sources]
mjlab = { git = "https://github.com/mujocolab/mjlab.git" }
myosuite = { git = "https://github.com/MyoHub/myosuite.git", branch = "mjx" }

[tool.uv]
override-dependencies = [
    "mujoco>=3.4.0",
]
